--- a/index.html
+++ b/index.html
@@ -5,7 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Freelance Web Developer - Création de sites web professionnels, WordPress, Landing Pages. Services bilingues FR/EN.">
     <title>Freelance Web Developer | Création de Sites Web Professionnels</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Force dark theme immediately */
+        body {
+            background-color: #0a0a0a !important;
+            color: #e2e8f0 !important;
+        }
+        h1, h2, h3, h4, h5, h6 {
+            color: #cbd5e1 !important;
+        }
+        p {
+            color: #e2e8f0 !important;
+        }
+        .navbar {
+            background-color: rgba(10, 10, 10, 0.95) !important;
+        }
+    </style>
+    <link rel="stylesheet" href="styles.css?v=2">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
